fix: correct answer display bug and refactor question management . Fixed an issue where correct/incorrect answer feedback was not shown properly. moved the questions into a separate component and shifted question state management there

--- a/src/component/Quiz/Quiz.scss
+++ b/src/component/Quiz/Quiz.scss
@@ -1,75 +1,9 @@
-#question {
-  text-transform: uppercase;
-  color: #30273a;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2.5rem;
-
-  h2 {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.6rem;
-    font-weight: normal;
-    color: #c1b2dd;
-    text-align: center;
-  }
-}
-
-#answers {
-  list-style: none;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-
-  .answer {
-    width: 90%;
-    margin: 0 auto;
-
-    button {
-      display: inline-block;
-      width: 100%;
-      font-family: 'Roboto Condensed', sans-serif;
-      font-size: 0.9rem;
-      padding: 1rem 2rem;
-      border: none;
-      border-radius: 24px;
-      background: #6cb7f5;
-      cursor: pointer;
-      transition: all 0.2s ease-in-out;
-
-      &.selected {
-        background: #f5a76c;
-        color: #2c203d;
-      }
-
-      &.correct {
-        background: #5af59d;
-        color: #2c203d;
-      }
-
-      &.wrong {
-        background: #f55a98;
-        color: #2c203d;
-      }
-
-      &:hover,
-      &:focus {
-        background: #9d5af5;
-        color: white;
-      }
-    }
-  }
-}
-
 #quiz {
   max-width: 50rem;
   margin: auto;
   padding: 2rem;
   background: linear-gradient(180deg, #3e2a60 0%, #321061 100%);
   border-radius: 8px;
-  /* box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.6); */
   box-shadow: 1px 1px 8px 4px rgba(12, 5, 32, 0.6);
   text-align: center;
 }
